# gaidys-hacker-123

./: README.md
payload/: CMakeLists.txt
payload/api/anti-vm/: anti-vm.h
payload/api/ntshit/: structs.h
payload/api/utils/: fnPtrs.h  hashfuncs.c  hashfuncs.h
